crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__symbols_preview_zh_hans_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x24
Carina ▾   ·  carina 会话                                                                                                                          model   执行
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                 ╭ 设置 / 符号 ───────────────────────────────────────────────╮
                                                 │ 请选择保持对齐的行。方框或错位符号表示字体覆盖不完整。     │
                                                 │                                                            │
                                                 │ ▌ 1  自动          默认 Unicode；旧式终端用 ASCII          │
                                                 │   2  Unicode       常用 Unicode 字体支持                   │
                                                 │   3  Nerd Font     需要 Nerd Font Mono                     │
                                                 │   4  ASCII         字体兼容性最高                          │
                                                 │                                                            │
                                                 │ ✓ 完成   ● 正在处理   ! 审阅   ✗ 失败                      │
                                                 │ ▌ 导航  ▸ 关闭  ▾ 打开  │ 状态  ⠋正在处理                  │
                                                 │ 偏好：自动  ·  当前：Unicode                               │
                                                 │                                                            │
                                                 │                                                            │
                                                 │                                                            │
                                                 │                                                            │
                                                 │                                                            │
                                                 │                                                            │
                                                 │                                                            │
                                                 │ [ Enter 应用 ] [ Esc 保留当前设置 ]                        │
                                                 ╰────────────────────────────────────────────────────────────╯
styles:
(0,0)..(9,0) (Reset, Reset, BOLD)
(9,0)..(25,0) (Rgb(150, 160, 156), Reset, NONE)
(146,0)..(153,0) (Rgb(150, 160, 156), Reset, NONE)
(154,0)..(160,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(160,1) (Rgb(52, 65, 68), Reset, NONE)
(49,2)..(111,2) (Rgb(52, 65, 68), Reset, NONE)
(49,3)..(50,3) (Rgb(52, 65, 68), Reset, NONE)
(51,3)..(109,3) (Rgb(150, 160, 156), Reset, NONE)
(110,3)..(111,3) (Rgb(52, 65, 68), Reset, NONE)
(49,4)..(50,4) (Rgb(52, 65, 68), Reset, NONE)
(51,4)..(109,4) (Rgb(150, 160, 156), Reset, NONE)
(110,4)..(111,4) (Rgb(52, 65, 68), Reset, NONE)
(49,5)..(50,5) (Rgb(52, 65, 68), Reset, NONE)
(51,5)..(109,5) (Reset, Rgb(36, 61, 62), BOLD)
(110,5)..(111,5) (Rgb(52, 65, 68), Reset, NONE)
(49,6)..(50,6) (Rgb(52, 65, 68), Reset, NONE)
(110,6)..(111,6) (Rgb(52, 65, 68), Reset, NONE)
(49,7)..(50,7) (Rgb(52, 65, 68), Reset, NONE)
(110,7)..(111,7) (Rgb(52, 65, 68), Reset, NONE)
(49,8)..(50,8) (Rgb(52, 65, 68), Reset, NONE)
(110,8)..(111,8) (Rgb(52, 65, 68), Reset, NONE)
(49,9)..(50,9) (Rgb(52, 65, 68), Reset, NONE)
(110,9)..(111,9) (Rgb(52, 65, 68), Reset, NONE)
(49,10)..(50,10) (Rgb(52, 65, 68), Reset, NONE)
(51,10)..(57,10) (Rgb(104, 210, 163), Reset, NONE)
(60,10)..(70,10) (Rgb(142, 219, 210), Reset, NONE)
(73,10)..(79,10) (Rgb(232, 168, 95), Reset, NONE)
(82,10)..(88,10) (Rgb(255, 124, 120), Reset, NONE)
(110,10)..(111,10) (Rgb(52, 65, 68), Reset, NONE)
(49,11)..(50,11) (Rgb(52, 65, 68), Reset, NONE)
(51,11)..(109,11) (Rgb(150, 160, 156), Reset, NONE)
(110,11)..(111,11) (Rgb(52, 65, 68), Reset, NONE)
(49,12)..(50,12) (Rgb(52, 65, 68), Reset, NONE)
(61,12)..(66,12) (Rgb(52, 65, 68), Reset, NONE)
(66,12)..(79,12) (Rgb(142, 219, 210), Reset, NONE)
(79,12)..(109,12) (Rgb(150, 160, 156), Reset, NONE)
(110,12)..(111,12) (Rgb(52, 65, 68), Reset, NONE)
(49,13)..(50,13) (Rgb(52, 65, 68), Reset, NONE)
(51,13)..(109,13) (Rgb(150, 160, 156), Reset, NONE)
(110,13)..(111,13) (Rgb(52, 65, 68), Reset, NONE)
(49,14)..(50,14) (Rgb(52, 65, 68), Reset, NONE)
(51,14)..(109,14) (Rgb(150, 160, 156), Reset, NONE)
(110,14)..(111,14) (Rgb(52, 65, 68), Reset, NONE)
(49,15)..(50,15) (Rgb(52, 65, 68), Reset, NONE)
(51,15)..(109,15) (Rgb(150, 160, 156), Reset, NONE)
(110,15)..(111,15) (Rgb(52, 65, 68), Reset, NONE)
(49,16)..(50,16) (Rgb(52, 65, 68), Reset, NONE)
(51,16)..(109,16) (Rgb(150, 160, 156), Reset, NONE)
(110,16)..(111,16) (Rgb(52, 65, 68), Reset, NONE)
(49,17)..(50,17) (Rgb(52, 65, 68), Reset, NONE)
(51,17)..(109,17) (Rgb(150, 160, 156), Reset, NONE)
(110,17)..(111,17) (Rgb(52, 65, 68), Reset, NONE)
(49,18)..(50,18) (Rgb(52, 65, 68), Reset, NONE)
(51,18)..(109,18) (Rgb(150, 160, 156), Reset, NONE)
(110,18)..(111,18) (Rgb(52, 65, 68), Reset, NONE)
(49,19)..(50,19) (Rgb(52, 65, 68), Reset, NONE)
(51,19)..(109,19) (Rgb(150, 160, 156), Reset, NONE)
(110,19)..(111,19) (Rgb(52, 65, 68), Reset, NONE)
(49,20)..(50,20) (Rgb(52, 65, 68), Reset, NONE)
(51,20)..(65,20) (Rgb(142, 219, 210), Reset, NONE)
(66,20)..(86,20) (Rgb(142, 219, 210), Reset, NONE)
(110,20)..(111,20) (Rgb(52, 65, 68), Reset, NONE)
(49,21)..(111,21) (Rgb(52, 65, 68), Reset, NONE)
