crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__symbols_preview_zh_hans_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x24
Carina ▾   ·  carina 会话                                          model   执行
────────────────────────────────────────────────────────────────────────────────
         ╭ 设置 / 符号 ───────────────────────────────────────────────╮
         │ 请选择保持对齐的行。方框或错位符号表示字体覆盖不完整。     │
         │                                                            │
         │ ▌ 1  自动          默认 Unicode；旧式终端用 ASCII          │
         │   2  Unicode       常用 Unicode 字体支持                   │
         │   3  Nerd Font     需要 Nerd Font Mono                     │
         │   4  ASCII         字体兼容性最高                          │
         │                                                            │
         │ ✓ 完成   ● 正在处理   ! 审阅   ✗ 失败                      │
         │ ▌ 导航  ▸ 关闭  ▾ 打开  │ 状态  ⠋正在处理                  │
         │ 偏好：自动  ·  当前：Unicode                               │
         │                                                            │
         │                                                            │
         │                                                            │
         │                                                            │
         │                                                            │
         │                                                            │
         │                                                            │
         │ [ Enter 应用 ] [ Esc 保留当前设置 ]                        │
         ╰────────────────────────────────────────────────────────────╯
styles:
(0,0)..(9,0) (Reset, Reset, BOLD)
(9,0)..(25,0) (Rgb(150, 160, 156), Reset, NONE)
(66,0)..(73,0) (Rgb(150, 160, 156), Reset, NONE)
(74,0)..(80,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(80,1) (Rgb(52, 65, 68), Reset, NONE)
(9,2)..(71,2) (Rgb(52, 65, 68), Reset, NONE)
(9,3)..(10,3) (Rgb(52, 65, 68), Reset, NONE)
(11,3)..(69,3) (Rgb(150, 160, 156), Reset, NONE)
(70,3)..(71,3) (Rgb(52, 65, 68), Reset, NONE)
(9,4)..(10,4) (Rgb(52, 65, 68), Reset, NONE)
(11,4)..(69,4) (Rgb(150, 160, 156), Reset, NONE)
(70,4)..(71,4) (Rgb(52, 65, 68), Reset, NONE)
(9,5)..(10,5) (Rgb(52, 65, 68), Reset, NONE)
(11,5)..(69,5) (Reset, Rgb(36, 61, 62), BOLD)
(70,5)..(71,5) (Rgb(52, 65, 68), Reset, NONE)
(9,6)..(10,6) (Rgb(52, 65, 68), Reset, NONE)
(70,6)..(71,6) (Rgb(52, 65, 68), Reset, NONE)
(9,7)..(10,7) (Rgb(52, 65, 68), Reset, NONE)
(70,7)..(71,7) (Rgb(52, 65, 68), Reset, NONE)
(9,8)..(10,8) (Rgb(52, 65, 68), Reset, NONE)
(70,8)..(71,8) (Rgb(52, 65, 68), Reset, NONE)
(9,9)..(10,9) (Rgb(52, 65, 68), Reset, NONE)
(70,9)..(71,9) (Rgb(52, 65, 68), Reset, NONE)
(9,10)..(10,10) (Rgb(52, 65, 68), Reset, NONE)
(11,10)..(17,10) (Rgb(104, 210, 163), Reset, NONE)
(20,10)..(30,10) (Rgb(142, 219, 210), Reset, NONE)
(33,10)..(39,10) (Rgb(232, 168, 95), Reset, NONE)
(42,10)..(48,10) (Rgb(255, 124, 120), Reset, NONE)
(70,10)..(71,10) (Rgb(52, 65, 68), Reset, NONE)
(9,11)..(10,11) (Rgb(52, 65, 68), Reset, NONE)
(11,11)..(69,11) (Rgb(150, 160, 156), Reset, NONE)
(70,11)..(71,11) (Rgb(52, 65, 68), Reset, NONE)
(9,12)..(10,12) (Rgb(52, 65, 68), Reset, NONE)
(21,12)..(26,12) (Rgb(52, 65, 68), Reset, NONE)
(26,12)..(39,12) (Rgb(142, 219, 210), Reset, NONE)
(39,12)..(69,12) (Rgb(150, 160, 156), Reset, NONE)
(70,12)..(71,12) (Rgb(52, 65, 68), Reset, NONE)
(9,13)..(10,13) (Rgb(52, 65, 68), Reset, NONE)
(11,13)..(69,13) (Rgb(150, 160, 156), Reset, NONE)
(70,13)..(71,13) (Rgb(52, 65, 68), Reset, NONE)
(9,14)..(10,14) (Rgb(52, 65, 68), Reset, NONE)
(11,14)..(69,14) (Rgb(150, 160, 156), Reset, NONE)
(70,14)..(71,14) (Rgb(52, 65, 68), Reset, NONE)
(9,15)..(10,15) (Rgb(52, 65, 68), Reset, NONE)
(11,15)..(69,15) (Rgb(150, 160, 156), Reset, NONE)
(70,15)..(71,15) (Rgb(52, 65, 68), Reset, NONE)
(9,16)..(10,16) (Rgb(52, 65, 68), Reset, NONE)
(11,16)..(69,16) (Rgb(150, 160, 156), Reset, NONE)
(70,16)..(71,16) (Rgb(52, 65, 68), Reset, NONE)
(9,17)..(10,17) (Rgb(52, 65, 68), Reset, NONE)
(11,17)..(69,17) (Rgb(150, 160, 156), Reset, NONE)
(70,17)..(71,17) (Rgb(52, 65, 68), Reset, NONE)
(9,18)..(10,18) (Rgb(52, 65, 68), Reset, NONE)
(11,18)..(69,18) (Rgb(150, 160, 156), Reset, NONE)
(70,18)..(71,18) (Rgb(52, 65, 68), Reset, NONE)
(9,19)..(10,19) (Rgb(52, 65, 68), Reset, NONE)
(11,19)..(69,19) (Rgb(150, 160, 156), Reset, NONE)
(70,19)..(71,19) (Rgb(52, 65, 68), Reset, NONE)
(9,20)..(10,20) (Rgb(52, 65, 68), Reset, NONE)
(11,20)..(25,20) (Rgb(142, 219, 210), Reset, NONE)
(26,20)..(46,20) (Rgb(142, 219, 210), Reset, NONE)
(70,20)..(71,20) (Rgb(52, 65, 68), Reset, NONE)
(9,21)..(71,21) (Rgb(52, 65, 68), Reset, NONE)
