crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_comfortable_en_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x40
 ❯ Refactor the transcript without hiding risk.


 • I will keep routine work quiet and reviewable changes visible across every supported terminal width.



┃⠋ Thinking  Inspecting the projection boundary
┃│ Mapping lifecycle owners and render paths.

 • Read    Inspect the semantic cell contract  src/semantic_cell.rs

 ▸ Explored ×5 · README.md, workspace, …
 │ Read    README.md
 │ List    workspace


┃! Action  Shell command needs approval  waiting for approval
┃│ cargo test --workspace


 ▸ Edit    Add typed skeletons  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}


┃✗ Execution failed  ·  provider/original-model  ·  2 attempts
┃│ The provider stopped before returning a complete response
┃│ [ Retry current ]  [ Replay original ]  [ Details ]  [ Copy ID ]


 • Diagnostic  Context compacted
 │ Older routine tool detail was summarized.
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(47,0) (Reset, Rgb(42, 46, 48), NONE)
(1,3)..(3,3) (Rgb(90, 101, 99), Reset, NONE)
(0,7)..(3,7) (Rgb(232, 168, 95), Reset, BOLD)
(3,7)..(47,7) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,8)..(1,8) (Rgb(232, 168, 95), Reset, BOLD)
(1,8)..(3,8) (Rgb(90, 101, 99), Reset, NONE)
(3,8)..(45,8) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,10)..(45,10) (Rgb(150, 160, 156), Reset, NONE)
(45,10)..(67,10) (Rgb(90, 101, 99), Reset, NONE)
(1,12)..(40,12) (Rgb(150, 160, 156), Reset, NONE)
(1,13)..(3,13) (Rgb(90, 101, 99), Reset, NONE)
(3,13)..(20,13) (Rgb(150, 160, 156), Reset, NONE)
(1,14)..(3,14) (Rgb(90, 101, 99), Reset, NONE)
(3,14)..(20,14) (Rgb(150, 160, 156), Reset, NONE)
(0,17)..(9,17) (Rgb(232, 168, 95), Reset, BOLD)
(39,17)..(61,17) (Rgb(90, 101, 99), Reset, NONE)
(0,18)..(1,18) (Rgb(232, 168, 95), Reset, BOLD)
(1,18)..(3,18) (Rgb(90, 101, 99), Reset, NONE)
(1,21)..(30,21) (Rgb(150, 160, 156), Reset, NONE)
(30,21)..(34,21) (Rgb(142, 219, 210), Reset, NONE)
(34,21)..(43,21) (Rgb(90, 101, 99), Reset, NONE)
(1,22)..(3,22) (Rgb(90, 101, 99), Reset, NONE)
(3,22)..(23,22) (Rgb(150, 160, 156), Reset, NONE)
(1,23)..(16,23) (Rgb(90, 101, 99), Reset, NONE)
(1,24)..(8,24) (Rgb(90, 101, 99), Reset, NONE)
(8,24)..(36,24) (Rgb(150, 160, 156), Reset, NONE)
(0,27)..(3,27) (Rgb(255, 124, 120), Reset, NONE)
(3,27)..(19,27) (Rgb(255, 124, 120), Reset, BOLD)
(19,27)..(24,27) (Rgb(90, 101, 99), Reset, NONE)
(47,27)..(62,27) (Rgb(90, 101, 99), Reset, NONE)
(0,28)..(1,28) (Rgb(255, 124, 120), Reset, NONE)
(1,28)..(3,28) (Rgb(90, 101, 99), Reset, NONE)
(0,29)..(1,29) (Rgb(255, 124, 120), Reset, NONE)
(1,29)..(3,29) (Rgb(90, 101, 99), Reset, NONE)
(3,29)..(20,29) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(20,29)..(22,29) (Rgb(90, 101, 99), Reset, NONE)
(22,29)..(41,29) (Reset, Reset, BOLD)
(41,29)..(67,29) (Rgb(90, 101, 99), Reset, NONE)
(1,32)..(13,32) (Rgb(90, 101, 99), Reset, BOLD)
(13,32)..(32,32) (Rgb(90, 101, 99), Reset, NONE)
(1,33)..(44,33) (Rgb(90, 101, 99), Reset, NONE)
