crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_comfortable_en_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x40
                    ❯ Refactor the transcript without hiding risk.


                    • I will keep routine work quiet and reviewable changes visible across every supported terminal width.



                   ┃⠋ Thinking  Inspecting the projection boundary
                   ┃│ Mapping lifecycle owners and render paths.

                    • Read    Inspect the semantic cell contract  src/semantic_cell.rs

                    ▸ Explored ×5 · README.md, workspace, …
                    │ Read    README.md
                    │ List    workspace


                   ┃! Action  Shell command needs approval  waiting for approval
                   ┃│ cargo test --workspace


                    ▸ Edit    Add typed skeletons  +1  applied
                    │ src/semantic_cell.rs
                    │ +1 · new file
                    │    1 pub enum SemanticCellKind {}


                   ┃✗ Execution failed  ·  provider/original-model  ·  2 attempts
                   ┃│ The provider stopped before returning a complete response
                   ┃│ [ Retry current ]  [ Replay original ]  [ Details ]  [ Copy ID ]


                    • Diagnostic  Context compacted
                    │ Older routine tool detail was summarized.
styles:
(20,0)..(22,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(22,0)..(66,0) (Reset, Rgb(42, 46, 48), NONE)
(20,3)..(22,3) (Rgb(90, 101, 99), Reset, NONE)
(19,7)..(22,7) (Rgb(232, 168, 95), Reset, BOLD)
(22,7)..(66,7) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(19,8)..(20,8) (Rgb(232, 168, 95), Reset, BOLD)
(20,8)..(22,8) (Rgb(90, 101, 99), Reset, NONE)
(22,8)..(64,8) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(20,10)..(64,10) (Rgb(150, 160, 156), Reset, NONE)
(64,10)..(86,10) (Rgb(90, 101, 99), Reset, NONE)
(20,12)..(59,12) (Rgb(150, 160, 156), Reset, NONE)
(20,13)..(22,13) (Rgb(90, 101, 99), Reset, NONE)
(22,13)..(39,13) (Rgb(150, 160, 156), Reset, NONE)
(20,14)..(22,14) (Rgb(90, 101, 99), Reset, NONE)
(22,14)..(39,14) (Rgb(150, 160, 156), Reset, NONE)
(19,17)..(28,17) (Rgb(232, 168, 95), Reset, BOLD)
(58,17)..(80,17) (Rgb(90, 101, 99), Reset, NONE)
(19,18)..(20,18) (Rgb(232, 168, 95), Reset, BOLD)
(20,18)..(22,18) (Rgb(90, 101, 99), Reset, NONE)
(20,21)..(49,21) (Rgb(150, 160, 156), Reset, NONE)
(49,21)..(53,21) (Rgb(142, 219, 210), Reset, NONE)
(53,21)..(62,21) (Rgb(90, 101, 99), Reset, NONE)
(20,22)..(22,22) (Rgb(90, 101, 99), Reset, NONE)
(22,22)..(42,22) (Rgb(150, 160, 156), Reset, NONE)
(20,23)..(35,23) (Rgb(90, 101, 99), Reset, NONE)
(20,24)..(27,24) (Rgb(90, 101, 99), Reset, NONE)
(27,24)..(55,24) (Rgb(150, 160, 156), Reset, NONE)
(19,27)..(22,27) (Rgb(255, 124, 120), Reset, NONE)
(22,27)..(38,27) (Rgb(255, 124, 120), Reset, BOLD)
(38,27)..(43,27) (Rgb(90, 101, 99), Reset, NONE)
(66,27)..(81,27) (Rgb(90, 101, 99), Reset, NONE)
(19,28)..(20,28) (Rgb(255, 124, 120), Reset, NONE)
(20,28)..(22,28) (Rgb(90, 101, 99), Reset, NONE)
(19,29)..(20,29) (Rgb(255, 124, 120), Reset, NONE)
(20,29)..(22,29) (Rgb(90, 101, 99), Reset, NONE)
(22,29)..(39,29) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(39,29)..(41,29) (Rgb(90, 101, 99), Reset, NONE)
(41,29)..(60,29) (Reset, Reset, BOLD)
(60,29)..(86,29) (Rgb(90, 101, 99), Reset, NONE)
(20,32)..(32,32) (Rgb(90, 101, 99), Reset, BOLD)
(32,32)..(51,32) (Rgb(90, 101, 99), Reset, NONE)
(20,33)..(63,33) (Rgb(90, 101, 99), Reset, NONE)
