crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_comfortable_en_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x40
 ❯ Refactor the transcript without hiding risk.


 • I will keep routine work quiet and reviewable changes visible across every s
   upported terminal width.



┃⠋ Thinking  Inspecting the projection boundary
┃│ Mapping lifecycle owners and render paths.

 • Read    Inspect the semantic cell contract  src/semantic_cell.rs

 ▸ Explored ×5 · README.md, workspace, …
 │ Read    README.md
 │ List    workspace


┃! Action  Shell command needs approval  waiting for approval
┃│ cargo test --workspace


 ▸ Edit    Add typed skeletons  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}


┃✗ Execution failed  ·  provider/original-model  ·  2 attempts
┃│ The provider stopped before returning a complete response
┃│ [ Retry current ]  [ Replay original ]  [ Details ]  [ Copy ID ]


 • Diagnostic  Context compacted
 │ Older routine tool detail was summarized.
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(47,0) (Reset, Rgb(42, 46, 48), NONE)
(1,3)..(3,3) (Rgb(90, 101, 99), Reset, NONE)
(1,4)..(3,4) (Rgb(90, 101, 99), Reset, NONE)
(0,8)..(3,8) (Rgb(232, 168, 95), Reset, BOLD)
(3,8)..(47,8) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,9)..(1,9) (Rgb(232, 168, 95), Reset, BOLD)
(1,9)..(3,9) (Rgb(90, 101, 99), Reset, NONE)
(3,9)..(45,9) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,11)..(45,11) (Rgb(150, 160, 156), Reset, NONE)
(45,11)..(67,11) (Rgb(90, 101, 99), Reset, NONE)
(1,13)..(40,13) (Rgb(150, 160, 156), Reset, NONE)
(1,14)..(3,14) (Rgb(90, 101, 99), Reset, NONE)
(3,14)..(20,14) (Rgb(150, 160, 156), Reset, NONE)
(1,15)..(3,15) (Rgb(90, 101, 99), Reset, NONE)
(3,15)..(20,15) (Rgb(150, 160, 156), Reset, NONE)
(0,18)..(9,18) (Rgb(232, 168, 95), Reset, BOLD)
(39,18)..(61,18) (Rgb(90, 101, 99), Reset, NONE)
(0,19)..(1,19) (Rgb(232, 168, 95), Reset, BOLD)
(1,19)..(3,19) (Rgb(90, 101, 99), Reset, NONE)
(1,22)..(30,22) (Rgb(150, 160, 156), Reset, NONE)
(30,22)..(34,22) (Rgb(142, 219, 210), Reset, NONE)
(34,22)..(43,22) (Rgb(90, 101, 99), Reset, NONE)
(1,23)..(3,23) (Rgb(90, 101, 99), Reset, NONE)
(3,23)..(23,23) (Rgb(150, 160, 156), Reset, NONE)
(1,24)..(16,24) (Rgb(90, 101, 99), Reset, NONE)
(1,25)..(8,25) (Rgb(90, 101, 99), Reset, NONE)
(8,25)..(36,25) (Rgb(150, 160, 156), Reset, NONE)
(0,28)..(3,28) (Rgb(255, 124, 120), Reset, NONE)
(3,28)..(19,28) (Rgb(255, 124, 120), Reset, BOLD)
(19,28)..(24,28) (Rgb(90, 101, 99), Reset, NONE)
(47,28)..(62,28) (Rgb(90, 101, 99), Reset, NONE)
(0,29)..(1,29) (Rgb(255, 124, 120), Reset, NONE)
(1,29)..(3,29) (Rgb(90, 101, 99), Reset, NONE)
(0,30)..(1,30) (Rgb(255, 124, 120), Reset, NONE)
(1,30)..(3,30) (Rgb(90, 101, 99), Reset, NONE)
(3,30)..(20,30) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(20,30)..(22,30) (Rgb(90, 101, 99), Reset, NONE)
(22,30)..(41,30) (Reset, Reset, BOLD)
(41,30)..(67,30) (Rgb(90, 101, 99), Reset, NONE)
(1,33)..(13,33) (Rgb(90, 101, 99), Reset, BOLD)
(13,33)..(32,33) (Rgb(90, 101, 99), Reset, NONE)
(1,34)..(44,34) (Rgb(90, 101, 99), Reset, NONE)
