crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_comfortable_zh_hans_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x40
 ❯ 重构会话记录，但不能隐藏风险。


 • 我会让常规操作保持安静，同时让可审阅的改动清晰可见，并在窄屏和宽屏上保留批准、补丁与失败证据。



┃⠋ 思考  检查投影边界
┃│ 正在映射生命周期所有权与渲染路径。

 • Read    检查语义单元契约  src/semantic_cell.rs

 ▸ 已探索 ×5 · README.md, workspace, …
 │ Read    README.md
 │ List    workspace


┃! 操作  Shell 命令需要批准  等待批准
┃│ cargo test --workspace


 ▸ Edit    添加类型化骨架  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}


┃✗ 执行失败  ·  provider/original-model  ·  尝试 2 次
┃│ 模型服务商在返回完整响应前停止了
┃│ [ 用当前模型重试 ]  [ 重放原配置 ]  [ 详情 ]  [ 复制 ID ]


 • 诊断  上下文已压缩
 │ 较早的常规工具详情已被摘要。
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(33,0) (Reset, Rgb(42, 46, 48), NONE)
(1,3)..(3,3) (Rgb(90, 101, 99), Reset, NONE)
(0,7)..(3,7) (Rgb(232, 168, 95), Reset, BOLD)
(3,7)..(21,7) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,8)..(1,8) (Rgb(232, 168, 95), Reset, BOLD)
(1,8)..(3,8) (Rgb(90, 101, 99), Reset, NONE)
(3,8)..(37,8) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,10)..(27,10) (Rgb(150, 160, 156), Reset, NONE)
(27,10)..(49,10) (Rgb(90, 101, 99), Reset, NONE)
(1,12)..(38,12) (Rgb(150, 160, 156), Reset, NONE)
(1,13)..(3,13) (Rgb(90, 101, 99), Reset, NONE)
(3,13)..(20,13) (Rgb(150, 160, 156), Reset, NONE)
(1,14)..(3,14) (Rgb(90, 101, 99), Reset, NONE)
(3,14)..(20,14) (Rgb(150, 160, 156), Reset, NONE)
(0,17)..(7,17) (Rgb(232, 168, 95), Reset, BOLD)
(27,17)..(37,17) (Rgb(90, 101, 99), Reset, NONE)
(0,18)..(1,18) (Rgb(232, 168, 95), Reset, BOLD)
(1,18)..(3,18) (Rgb(90, 101, 99), Reset, NONE)
(1,21)..(25,21) (Rgb(150, 160, 156), Reset, NONE)
(25,21)..(29,21) (Rgb(142, 219, 210), Reset, NONE)
(29,21)..(38,21) (Rgb(90, 101, 99), Reset, NONE)
(1,22)..(3,22) (Rgb(90, 101, 99), Reset, NONE)
(3,22)..(23,22) (Rgb(150, 160, 156), Reset, NONE)
(1,23)..(16,23) (Rgb(90, 101, 99), Reset, NONE)
(1,24)..(8,24) (Rgb(90, 101, 99), Reset, NONE)
(8,24)..(36,24) (Rgb(150, 160, 156), Reset, NONE)
(0,27)..(3,27) (Rgb(255, 124, 120), Reset, NONE)
(3,27)..(11,27) (Rgb(255, 124, 120), Reset, BOLD)
(11,27)..(16,27) (Rgb(90, 101, 99), Reset, NONE)
(39,27)..(53,27) (Rgb(90, 101, 99), Reset, NONE)
(0,28)..(1,28) (Rgb(255, 124, 120), Reset, NONE)
(1,28)..(3,28) (Rgb(90, 101, 99), Reset, NONE)
(0,29)..(1,29) (Rgb(255, 124, 120), Reset, NONE)
(1,29)..(3,29) (Rgb(90, 101, 99), Reset, NONE)
(3,29)..(21,29) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(21,29)..(23,29) (Rgb(90, 101, 99), Reset, NONE)
(23,29)..(37,29) (Reset, Reset, BOLD)
(37,29)..(60,29) (Rgb(90, 101, 99), Reset, NONE)
(1,32)..(7,32) (Rgb(90, 101, 99), Reset, BOLD)
(7,32)..(21,32) (Rgb(90, 101, 99), Reset, NONE)
(1,33)..(31,33) (Rgb(90, 101, 99), Reset, NONE)
