crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_comfortable_zh_hans_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x40
                    ❯ 重构会话记录，但不能隐藏风险。


                    • 我会让常规操作保持安静，同时让可审阅的改动清晰可见，并在窄屏和宽屏上保留批准、补丁与失败证据。



                   ┃⠋ 思考  检查投影边界
                   ┃│ 正在映射生命周期所有权与渲染路径。

                    • Read    检查语义单元契约  src/semantic_cell.rs

                    ▸ 已探索 ×5 · README.md, workspace, …
                    │ Read    README.md
                    │ List    workspace


                   ┃! 操作  Shell 命令需要批准  等待批准
                   ┃│ cargo test --workspace


                    ▸ Edit    添加类型化骨架  +1  applied
                    │ src/semantic_cell.rs
                    │ +1 · new file
                    │    1 pub enum SemanticCellKind {}


                   ┃✗ 执行失败  ·  provider/original-model  ·  尝试 2 次
                   ┃│ 模型服务商在返回完整响应前停止了
                   ┃│ [ 用当前模型重试 ]  [ 重放原配置 ]  [ 详情 ]  [ 复制 ID ]


                    • 诊断  上下文已压缩
                    │ 较早的常规工具详情已被摘要。
styles:
(20,0)..(22,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(22,0)..(52,0) (Reset, Rgb(42, 46, 48), NONE)
(20,3)..(22,3) (Rgb(90, 101, 99), Reset, NONE)
(19,7)..(22,7) (Rgb(232, 168, 95), Reset, BOLD)
(22,7)..(40,7) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(19,8)..(20,8) (Rgb(232, 168, 95), Reset, BOLD)
(20,8)..(22,8) (Rgb(90, 101, 99), Reset, NONE)
(22,8)..(56,8) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(20,10)..(46,10) (Rgb(150, 160, 156), Reset, NONE)
(46,10)..(68,10) (Rgb(90, 101, 99), Reset, NONE)
(20,12)..(57,12) (Rgb(150, 160, 156), Reset, NONE)
(20,13)..(22,13) (Rgb(90, 101, 99), Reset, NONE)
(22,13)..(39,13) (Rgb(150, 160, 156), Reset, NONE)
(20,14)..(22,14) (Rgb(90, 101, 99), Reset, NONE)
(22,14)..(39,14) (Rgb(150, 160, 156), Reset, NONE)
(19,17)..(26,17) (Rgb(232, 168, 95), Reset, BOLD)
(46,17)..(56,17) (Rgb(90, 101, 99), Reset, NONE)
(19,18)..(20,18) (Rgb(232, 168, 95), Reset, BOLD)
(20,18)..(22,18) (Rgb(90, 101, 99), Reset, NONE)
(20,21)..(44,21) (Rgb(150, 160, 156), Reset, NONE)
(44,21)..(48,21) (Rgb(142, 219, 210), Reset, NONE)
(48,21)..(57,21) (Rgb(90, 101, 99), Reset, NONE)
(20,22)..(22,22) (Rgb(90, 101, 99), Reset, NONE)
(22,22)..(42,22) (Rgb(150, 160, 156), Reset, NONE)
(20,23)..(35,23) (Rgb(90, 101, 99), Reset, NONE)
(20,24)..(27,24) (Rgb(90, 101, 99), Reset, NONE)
(27,24)..(55,24) (Rgb(150, 160, 156), Reset, NONE)
(19,27)..(22,27) (Rgb(255, 124, 120), Reset, NONE)
(22,27)..(30,27) (Rgb(255, 124, 120), Reset, BOLD)
(30,27)..(35,27) (Rgb(90, 101, 99), Reset, NONE)
(58,27)..(72,27) (Rgb(90, 101, 99), Reset, NONE)
(19,28)..(20,28) (Rgb(255, 124, 120), Reset, NONE)
(20,28)..(22,28) (Rgb(90, 101, 99), Reset, NONE)
(19,29)..(20,29) (Rgb(255, 124, 120), Reset, NONE)
(20,29)..(22,29) (Rgb(90, 101, 99), Reset, NONE)
(22,29)..(40,29) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(40,29)..(42,29) (Rgb(90, 101, 99), Reset, NONE)
(42,29)..(56,29) (Reset, Reset, BOLD)
(56,29)..(79,29) (Rgb(90, 101, 99), Reset, NONE)
(20,32)..(26,32) (Rgb(90, 101, 99), Reset, BOLD)
(26,32)..(40,32) (Rgb(90, 101, 99), Reset, NONE)
(20,33)..(50,33) (Rgb(90, 101, 99), Reset, NONE)
