crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_comfortable_zh_hans_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x40
 ❯ 重构会话记录，但不能隐藏风险。


 • 我会让常规操作保持安静，同时让可审阅的改动清晰可见，并在窄屏和宽屏上保留批准
   、补丁与失败证据。



┃⠋ 思考  检查投影边界
┃│ 正在映射生命周期所有权与渲染路径。

 • Read    检查语义单元契约  src/semantic_cell.rs

 ▸ 已探索 ×5 · README.md, workspace, …
 │ Read    README.md
 │ List    workspace


┃! 操作  Shell 命令需要批准  等待批准
┃│ cargo test --workspace


 ▸ Edit    添加类型化骨架  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}


┃✗ 执行失败  ·  provider/original-model  ·  尝试 2 次
┃│ 模型服务商在返回完整响应前停止了
┃│ [ 用当前模型重试 ]  [ 重放原配置 ]  [ 详情 ]  [ 复制 ID ]


 • 诊断  上下文已压缩
 │ 较早的常规工具详情已被摘要。
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(33,0) (Reset, Rgb(42, 46, 48), NONE)
(1,3)..(3,3) (Rgb(90, 101, 99), Reset, NONE)
(1,4)..(3,4) (Rgb(90, 101, 99), Reset, NONE)
(0,8)..(3,8) (Rgb(232, 168, 95), Reset, BOLD)
(3,8)..(21,8) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,9)..(1,9) (Rgb(232, 168, 95), Reset, BOLD)
(1,9)..(3,9) (Rgb(90, 101, 99), Reset, NONE)
(3,9)..(37,9) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,11)..(27,11) (Rgb(150, 160, 156), Reset, NONE)
(27,11)..(49,11) (Rgb(90, 101, 99), Reset, NONE)
(1,13)..(38,13) (Rgb(150, 160, 156), Reset, NONE)
(1,14)..(3,14) (Rgb(90, 101, 99), Reset, NONE)
(3,14)..(20,14) (Rgb(150, 160, 156), Reset, NONE)
(1,15)..(3,15) (Rgb(90, 101, 99), Reset, NONE)
(3,15)..(20,15) (Rgb(150, 160, 156), Reset, NONE)
(0,18)..(7,18) (Rgb(232, 168, 95), Reset, BOLD)
(27,18)..(37,18) (Rgb(90, 101, 99), Reset, NONE)
(0,19)..(1,19) (Rgb(232, 168, 95), Reset, BOLD)
(1,19)..(3,19) (Rgb(90, 101, 99), Reset, NONE)
(1,22)..(25,22) (Rgb(150, 160, 156), Reset, NONE)
(25,22)..(29,22) (Rgb(142, 219, 210), Reset, NONE)
(29,22)..(38,22) (Rgb(90, 101, 99), Reset, NONE)
(1,23)..(3,23) (Rgb(90, 101, 99), Reset, NONE)
(3,23)..(23,23) (Rgb(150, 160, 156), Reset, NONE)
(1,24)..(16,24) (Rgb(90, 101, 99), Reset, NONE)
(1,25)..(8,25) (Rgb(90, 101, 99), Reset, NONE)
(8,25)..(36,25) (Rgb(150, 160, 156), Reset, NONE)
(0,28)..(3,28) (Rgb(255, 124, 120), Reset, NONE)
(3,28)..(11,28) (Rgb(255, 124, 120), Reset, BOLD)
(11,28)..(16,28) (Rgb(90, 101, 99), Reset, NONE)
(39,28)..(53,28) (Rgb(90, 101, 99), Reset, NONE)
(0,29)..(1,29) (Rgb(255, 124, 120), Reset, NONE)
(1,29)..(3,29) (Rgb(90, 101, 99), Reset, NONE)
(0,30)..(1,30) (Rgb(255, 124, 120), Reset, NONE)
(1,30)..(3,30) (Rgb(90, 101, 99), Reset, NONE)
(3,30)..(21,30) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(21,30)..(23,30) (Rgb(90, 101, 99), Reset, NONE)
(23,30)..(37,30) (Reset, Reset, BOLD)
(37,30)..(60,30) (Rgb(90, 101, 99), Reset, NONE)
(1,33)..(7,33) (Rgb(90, 101, 99), Reset, BOLD)
(7,33)..(21,33) (Rgb(90, 101, 99), Reset, NONE)
(1,34)..(31,34) (Rgb(90, 101, 99), Reset, NONE)
