crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_en_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x40
 ❯ Refactor the transcript without hiding risk.

 • I will keep routine work quiet and reviewable changes visible across every supported terminal width.


┃⠋ Thinking  Inspecting the projection boundary
┃│ Mapping lifecycle owners and render paths.
 • Read    Inspect the semantic cell contract  src/semantic_cell.rs
 ▸ Explored ×5 · README.md, workspace, …

┃! Action  Shell command needs approval  waiting for approval
┃│ cargo test --workspace

 ▸ Edit    Add typed skeletons  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}

┃✗ Execution failed  ·  provider/original-model  ·  2 attempts
┃│ The provider stopped before returning a complete response
┃│ [ Retry current ]  [ Replay original ]  [ Details ]  [ Copy ID ]

 • Diagnostic  Context compacted
 │ Older routine tool detail was summarized.
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(47,0) (Reset, Rgb(42, 46, 48), NONE)
(1,2)..(3,2) (Rgb(90, 101, 99), Reset, NONE)
(0,5)..(3,5) (Rgb(232, 168, 95), Reset, BOLD)
(3,5)..(47,5) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,6)..(1,6) (Rgb(232, 168, 95), Reset, BOLD)
(1,6)..(3,6) (Rgb(90, 101, 99), Reset, NONE)
(3,6)..(45,6) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,7)..(45,7) (Rgb(150, 160, 156), Reset, NONE)
(45,7)..(67,7) (Rgb(90, 101, 99), Reset, NONE)
(1,8)..(40,8) (Rgb(150, 160, 156), Reset, NONE)
(0,10)..(9,10) (Rgb(232, 168, 95), Reset, BOLD)
(39,10)..(61,10) (Rgb(90, 101, 99), Reset, NONE)
(0,11)..(1,11) (Rgb(232, 168, 95), Reset, BOLD)
(1,11)..(3,11) (Rgb(90, 101, 99), Reset, NONE)
(1,13)..(30,13) (Rgb(150, 160, 156), Reset, NONE)
(30,13)..(34,13) (Rgb(142, 219, 210), Reset, NONE)
(34,13)..(43,13) (Rgb(90, 101, 99), Reset, NONE)
(1,14)..(3,14) (Rgb(90, 101, 99), Reset, NONE)
(3,14)..(23,14) (Rgb(150, 160, 156), Reset, NONE)
(1,15)..(16,15) (Rgb(90, 101, 99), Reset, NONE)
(1,16)..(8,16) (Rgb(90, 101, 99), Reset, NONE)
(8,16)..(36,16) (Rgb(150, 160, 156), Reset, NONE)
(0,18)..(3,18) (Rgb(255, 124, 120), Reset, NONE)
(3,18)..(19,18) (Rgb(255, 124, 120), Reset, BOLD)
(19,18)..(24,18) (Rgb(90, 101, 99), Reset, NONE)
(47,18)..(62,18) (Rgb(90, 101, 99), Reset, NONE)
(0,19)..(1,19) (Rgb(255, 124, 120), Reset, NONE)
(1,19)..(3,19) (Rgb(90, 101, 99), Reset, NONE)
(0,20)..(1,20) (Rgb(255, 124, 120), Reset, NONE)
(1,20)..(3,20) (Rgb(90, 101, 99), Reset, NONE)
(3,20)..(20,20) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(20,20)..(22,20) (Rgb(90, 101, 99), Reset, NONE)
(22,20)..(41,20) (Reset, Reset, BOLD)
(41,20)..(67,20) (Rgb(90, 101, 99), Reset, NONE)
(1,22)..(13,22) (Rgb(90, 101, 99), Reset, BOLD)
(13,22)..(32,22) (Rgb(90, 101, 99), Reset, NONE)
(1,23)..(44,23) (Rgb(90, 101, 99), Reset, NONE)
