crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_en_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x40
                    ❯ Refactor the transcript without hiding risk.

                    • I will keep routine work quiet and reviewable changes visible across every supported terminal width.


                   ┃⠋ Thinking  Inspecting the projection boundary
                   ┃│ Mapping lifecycle owners and render paths.
                    • Read    Inspect the semantic cell contract  src/semantic_cell.rs
                    ▸ Explored ×5 · README.md, workspace, …

                   ┃! Action  Shell command needs approval  waiting for approval
                   ┃│ cargo test --workspace

                    ▸ Edit    Add typed skeletons  +1  applied
                    │ src/semantic_cell.rs
                    │ +1 · new file
                    │    1 pub enum SemanticCellKind {}

                   ┃✗ Execution failed  ·  provider/original-model  ·  2 attempts
                   ┃│ The provider stopped before returning a complete response
                   ┃│ [ Retry current ]  [ Replay original ]  [ Details ]  [ Copy ID ]

                    • Diagnostic  Context compacted
                    │ Older routine tool detail was summarized.
styles:
(20,0)..(22,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(22,0)..(66,0) (Reset, Rgb(42, 46, 48), NONE)
(20,2)..(22,2) (Rgb(90, 101, 99), Reset, NONE)
(19,5)..(22,5) (Rgb(232, 168, 95), Reset, BOLD)
(22,5)..(66,5) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(19,6)..(20,6) (Rgb(232, 168, 95), Reset, BOLD)
(20,6)..(22,6) (Rgb(90, 101, 99), Reset, NONE)
(22,6)..(64,6) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(20,7)..(64,7) (Rgb(150, 160, 156), Reset, NONE)
(64,7)..(86,7) (Rgb(90, 101, 99), Reset, NONE)
(20,8)..(59,8) (Rgb(150, 160, 156), Reset, NONE)
(19,10)..(28,10) (Rgb(232, 168, 95), Reset, BOLD)
(58,10)..(80,10) (Rgb(90, 101, 99), Reset, NONE)
(19,11)..(20,11) (Rgb(232, 168, 95), Reset, BOLD)
(20,11)..(22,11) (Rgb(90, 101, 99), Reset, NONE)
(20,13)..(49,13) (Rgb(150, 160, 156), Reset, NONE)
(49,13)..(53,13) (Rgb(142, 219, 210), Reset, NONE)
(53,13)..(62,13) (Rgb(90, 101, 99), Reset, NONE)
(20,14)..(22,14) (Rgb(90, 101, 99), Reset, NONE)
(22,14)..(42,14) (Rgb(150, 160, 156), Reset, NONE)
(20,15)..(35,15) (Rgb(90, 101, 99), Reset, NONE)
(20,16)..(27,16) (Rgb(90, 101, 99), Reset, NONE)
(27,16)..(55,16) (Rgb(150, 160, 156), Reset, NONE)
(19,18)..(22,18) (Rgb(255, 124, 120), Reset, NONE)
(22,18)..(38,18) (Rgb(255, 124, 120), Reset, BOLD)
(38,18)..(43,18) (Rgb(90, 101, 99), Reset, NONE)
(66,18)..(81,18) (Rgb(90, 101, 99), Reset, NONE)
(19,19)..(20,19) (Rgb(255, 124, 120), Reset, NONE)
(20,19)..(22,19) (Rgb(90, 101, 99), Reset, NONE)
(19,20)..(20,20) (Rgb(255, 124, 120), Reset, NONE)
(20,20)..(22,20) (Rgb(90, 101, 99), Reset, NONE)
(22,20)..(39,20) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(39,20)..(41,20) (Rgb(90, 101, 99), Reset, NONE)
(41,20)..(60,20) (Reset, Reset, BOLD)
(60,20)..(86,20) (Rgb(90, 101, 99), Reset, NONE)
(20,22)..(32,22) (Rgb(90, 101, 99), Reset, BOLD)
(32,22)..(51,22) (Rgb(90, 101, 99), Reset, NONE)
(20,23)..(63,23) (Rgb(90, 101, 99), Reset, NONE)
