crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_en_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x40
 ❯ Refactor the transcript without hiding risk.

 • I will keep routine work quiet and reviewable changes visible across every s
   upported terminal width.


┃⠋ Thinking  Inspecting the projection boundary
┃│ Mapping lifecycle owners and render paths.
 • Read    Inspect the semantic cell contract  src/semantic_cell.rs
 ▸ Explored ×5 · README.md, workspace, …

┃! Action  Shell command needs approval  waiting for approval
┃│ cargo test --workspace

 ▸ Edit    Add typed skeletons  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}

┃✗ Execution failed  ·  provider/original-model  ·  2 attempts
┃│ The provider stopped before returning a complete response
┃│ [ Retry current ]  [ Replay original ]  [ Details ]  [ Copy ID ]

 • Diagnostic  Context compacted
 │ Older routine tool detail was summarized.
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(47,0) (Reset, Rgb(42, 46, 48), NONE)
(1,2)..(3,2) (Rgb(90, 101, 99), Reset, NONE)
(1,3)..(3,3) (Rgb(90, 101, 99), Reset, NONE)
(0,6)..(3,6) (Rgb(232, 168, 95), Reset, BOLD)
(3,6)..(47,6) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,7)..(1,7) (Rgb(232, 168, 95), Reset, BOLD)
(1,7)..(3,7) (Rgb(90, 101, 99), Reset, NONE)
(3,7)..(45,7) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,8)..(45,8) (Rgb(150, 160, 156), Reset, NONE)
(45,8)..(67,8) (Rgb(90, 101, 99), Reset, NONE)
(1,9)..(40,9) (Rgb(150, 160, 156), Reset, NONE)
(0,11)..(9,11) (Rgb(232, 168, 95), Reset, BOLD)
(39,11)..(61,11) (Rgb(90, 101, 99), Reset, NONE)
(0,12)..(1,12) (Rgb(232, 168, 95), Reset, BOLD)
(1,12)..(3,12) (Rgb(90, 101, 99), Reset, NONE)
(1,14)..(30,14) (Rgb(150, 160, 156), Reset, NONE)
(30,14)..(34,14) (Rgb(142, 219, 210), Reset, NONE)
(34,14)..(43,14) (Rgb(90, 101, 99), Reset, NONE)
(1,15)..(3,15) (Rgb(90, 101, 99), Reset, NONE)
(3,15)..(23,15) (Rgb(150, 160, 156), Reset, NONE)
(1,16)..(16,16) (Rgb(90, 101, 99), Reset, NONE)
(1,17)..(8,17) (Rgb(90, 101, 99), Reset, NONE)
(8,17)..(36,17) (Rgb(150, 160, 156), Reset, NONE)
(0,19)..(3,19) (Rgb(255, 124, 120), Reset, NONE)
(3,19)..(19,19) (Rgb(255, 124, 120), Reset, BOLD)
(19,19)..(24,19) (Rgb(90, 101, 99), Reset, NONE)
(47,19)..(62,19) (Rgb(90, 101, 99), Reset, NONE)
(0,20)..(1,20) (Rgb(255, 124, 120), Reset, NONE)
(1,20)..(3,20) (Rgb(90, 101, 99), Reset, NONE)
(0,21)..(1,21) (Rgb(255, 124, 120), Reset, NONE)
(1,21)..(3,21) (Rgb(90, 101, 99), Reset, NONE)
(3,21)..(20,21) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(20,21)..(22,21) (Rgb(90, 101, 99), Reset, NONE)
(22,21)..(41,21) (Reset, Reset, BOLD)
(41,21)..(67,21) (Rgb(90, 101, 99), Reset, NONE)
(1,23)..(13,23) (Rgb(90, 101, 99), Reset, BOLD)
(13,23)..(32,23) (Rgb(90, 101, 99), Reset, NONE)
(1,24)..(44,24) (Rgb(90, 101, 99), Reset, NONE)
