crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__visual_density_zh_hans_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x40
 ❯ 重构会话记录，但不能隐藏风险。

 • 我会让常规操作保持安静，同时让可审阅的改动清晰可见，并在窄屏和宽屏上保留批准、补丁与失败证据。


┃⠋ 思考  检查投影边界
┃│ 正在映射生命周期所有权与渲染路径。
 • Read    检查语义单元契约  src/semantic_cell.rs
 ▸ 已探索 ×5 · README.md, workspace, …

┃! 操作  Shell 命令需要批准  等待批准
┃│ cargo test --workspace

 ▸ Edit    添加类型化骨架  +1  applied
 │ src/semantic_cell.rs
 │ +1 · new file
 │    1 pub enum SemanticCellKind {}

┃✗ 执行失败  ·  provider/original-model  ·  尝试 2 次
┃│ 模型服务商在返回完整响应前停止了
┃│ [ 用当前模型重试 ]  [ 重放原配置 ]  [ 详情 ]  [ 复制 ID ]

 • 诊断  上下文已压缩
 │ 较早的常规工具详情已被摘要。
styles:
(1,0)..(3,0) (Rgb(195, 202, 198), Rgb(42, 46, 48), BOLD)
(3,0)..(33,0) (Reset, Rgb(42, 46, 48), NONE)
(1,2)..(3,2) (Rgb(90, 101, 99), Reset, NONE)
(0,5)..(3,5) (Rgb(232, 168, 95), Reset, BOLD)
(3,5)..(21,5) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(0,6)..(1,6) (Rgb(232, 168, 95), Reset, BOLD)
(1,6)..(3,6) (Rgb(90, 101, 99), Reset, NONE)
(3,6)..(37,6) (Rgb(90, 101, 99), Reset, DIM | ITALIC)
(1,7)..(27,7) (Rgb(150, 160, 156), Reset, NONE)
(27,7)..(49,7) (Rgb(90, 101, 99), Reset, NONE)
(1,8)..(38,8) (Rgb(150, 160, 156), Reset, NONE)
(0,10)..(7,10) (Rgb(232, 168, 95), Reset, BOLD)
(27,10)..(37,10) (Rgb(90, 101, 99), Reset, NONE)
(0,11)..(1,11) (Rgb(232, 168, 95), Reset, BOLD)
(1,11)..(3,11) (Rgb(90, 101, 99), Reset, NONE)
(1,13)..(25,13) (Rgb(150, 160, 156), Reset, NONE)
(25,13)..(29,13) (Rgb(142, 219, 210), Reset, NONE)
(29,13)..(38,13) (Rgb(90, 101, 99), Reset, NONE)
(1,14)..(3,14) (Rgb(90, 101, 99), Reset, NONE)
(3,14)..(23,14) (Rgb(150, 160, 156), Reset, NONE)
(1,15)..(16,15) (Rgb(90, 101, 99), Reset, NONE)
(1,16)..(8,16) (Rgb(90, 101, 99), Reset, NONE)
(8,16)..(36,16) (Rgb(150, 160, 156), Reset, NONE)
(0,18)..(3,18) (Rgb(255, 124, 120), Reset, NONE)
(3,18)..(11,18) (Rgb(255, 124, 120), Reset, BOLD)
(11,18)..(16,18) (Rgb(90, 101, 99), Reset, NONE)
(39,18)..(53,18) (Rgb(90, 101, 99), Reset, NONE)
(0,19)..(1,19) (Rgb(255, 124, 120), Reset, NONE)
(1,19)..(3,19) (Rgb(90, 101, 99), Reset, NONE)
(0,20)..(1,20) (Rgb(255, 124, 120), Reset, NONE)
(1,20)..(3,20) (Rgb(90, 101, 99), Reset, NONE)
(3,20)..(21,20) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(21,20)..(23,20) (Rgb(90, 101, 99), Reset, NONE)
(23,20)..(37,20) (Reset, Reset, BOLD)
(37,20)..(60,20) (Rgb(90, 101, 99), Reset, NONE)
(1,22)..(7,22) (Rgb(90, 101, 99), Reset, BOLD)
(7,22)..(21,22) (Rgb(90, 101, 99), Reset, NONE)
(1,23)..(31,23) (Rgb(90, 101, 99), Reset, NONE)
